ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/To_Merge__c/To_Merge__c.object-meta.xml
<CustomObject>
    <description>TEMPORARY object. This will be deleted. I&apos;m just trying to write a script that helps me automate merging of accounts when there are large quantities.

2019-12-04 Skooter</description>
    <label>To Merge</label>
    <nameField>
        <label>To Merge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>To Merge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>