ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/To_Merge__c/fields/Bulk_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Duplicates__c</fullName>
    <label>Bulk Duplicates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>