ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/To_Merge__c/fields/Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Duplicates__c</fullName>
    <inlineHelpText>Comma separated list of duplicates.</inlineHelpText>
    <label>Duplicates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>