ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/To_Merge__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <inlineHelpText>The master account ID</inlineHelpText>
    <label>Master</label>
    <length>18</length>
    <type>Text</type>
</CustomField>